--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,15 +2,15 @@ name: Build and Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 env:
   applicationfolder: spring-boot-hello-world-example
   AWS_REGION: us-east-1
-  S3BUCKET: SEU-BUCKET-AQUI
+  S3BUCKET: devops-app-deploy-492683309070
 
 jobs:
   build:
@@ -20,36 +20,36 @@ jobs:
       contents: read
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "temurin"
 
-    - name: Build with Maven
-      run: |
-        cd ${{ env.applicationfolder }}
-        mvn clean package -DskipTests
+      - name: Build with Maven
+        run: |
+          cd ${{ env.applicationfolder }}
+          mvn clean package -DskipTests
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
-        aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
+          aws-region: ${{ env.AWS_REGION }}
 
-    - name: Upload to S3
-      run: |
-        aws s3 cp ${{ env.applicationfolder }}/target/SpringBootHelloWorldExampleApplication.war \
-          s3://${{ env.S3BUCKET }}/SpringBootHelloWorldExampleApplication.war
+      - name: Upload to S3
+        run: |
+          aws s3 cp ${{ env.applicationfolder }}/target/SpringBootHelloWorldExampleApplication.war \
+            s3://${{ env.S3BUCKET }}/SpringBootHelloWorldExampleApplication.war
 
-    - name: Trigger CodeDeploy
-      run: |
-        aws deploy create-deployment \
-          --application-name CodeDeployAppNameWithASG \
-          --deployment-group-name CodeDeployGroupName \
-          --deployment-config-name CodeDeployDefault.OneAtATime \
-          --s3-location s3://${{ env.S3BUCKET }}/SpringBootHelloWorldExampleApplication.war \
-          --region ${{ env.AWS_REGION }}
+      - name: Trigger CodeDeploy
+        run: |
+          aws deploy create-deployment \
+            --application-name CodeDeployAppNameWithASG \
+            --deployment-group-name CodeDeployGroupName \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --s3-location s3://${{ env.S3BUCKET }}/SpringBootHelloWorldExampleApplication.war \
+            --region ${{ env.AWS_REGION }}
