--- a/aws/cloudformation/template.yaml
+++ b/aws/cloudformation/template.yaml
@@ -1,34 +1,34 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Description: 'Pipeline CI/CD com GitHub Actions e CodeDeploy'
+AWSTemplateFormatVersion: "2010-09-09"
+Description: "Pipeline CI/CD com GitHub Actions e CodeDeploy"
 
 Parameters:
   VpcCIDR:
     Type: String
     Default: 10.192.0.0/16
-  
+
   PublicSubnet1CIDR:
     Type: String
     Default: 10.192.10.0/24
-  
+
   PublicSubnet2CIDR:
     Type: String
     Default: 10.192.11.0/24
-  
+
   AutoScalingGroupMinSize:
     Type: Number
     Default: 2
-  
+
   AutoScalingGroupMaxSize:
     Type: Number
     Default: 2
-  
+
   AutoScalingGroupDesiredCapacity:
     Type: Number
     Default: 2
-  
+
   GitHubRepoName:
     Type: String
-    Description: 'seu-usuario/seu-repositorio'
+    Description: "seu-usuario/seu-repositorio"
 
 Resources:
   VPC:
@@ -39,14 +39,14 @@ Resources:
       EnableDnsSupport: true
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-VPC'
+          Value: !Sub "${AWS::StackName}-VPC"
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-IGW'
+          Value: !Sub "${AWS::StackName}-IGW"
 
   AttachGateway:
     Type: AWS::EC2::VPCGatewayAttachment
@@ -59,22 +59,22 @@ Resources:
     Properties:
       VpcId: !Ref VPC
       CidrBlock: !Ref PublicSubnet1CIDR
-      AvailabilityZone: !Select [0, !GetAZs '']
+      AvailabilityZone: !Select [0, !GetAZs ""]
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-PublicSubnet1'
+          Value: !Sub "${AWS::StackName}-PublicSubnet1"
 
   PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       CidrBlock: !Ref PublicSubnet2CIDR
-      AvailabilityZone: !Select [1, !GetAZs '']
+      AvailabilityZone: !Select [1, !GetAZs ""]
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-PublicSubnet2'
+          Value: !Sub "${AWS::StackName}-PublicSubnet2"
 
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
@@ -82,7 +82,7 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-PublicRT'
+          Value: !Sub "${AWS::StackName}-PublicRT"
 
   PublicRoute:
     Type: AWS::EC2::Route
@@ -120,7 +120,7 @@ Resources:
           CidrIp: 0.0.0.0/0
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-ALB-SG'
+          Value: !Sub "${AWS::StackName}-ALB-SG"
 
   EC2SecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -138,13 +138,13 @@ Resources:
           CidrIp: 0.0.0.0/0
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-EC2-SG'
+          Value: !Sub "${AWS::StackName}-EC2-SG"
 
   EC2InstanceRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           - Effect: Allow
             Principal:
@@ -155,18 +155,18 @@ Resources:
       Policies:
         - PolicyName: S3Access
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: "2012-10-17"
             Statement:
               - Effect: Allow
                 Action:
                   - s3:GetObject
                   - s3:ListBucket
                 Resource:
-                  - !Sub 'arn:aws:s3:::${WebAppDeploymentBucket}'
-                  - !Sub 'arn:aws:s3:::${WebAppDeploymentBucket}/*'
+                  - !Sub "arn:aws:s3:::${WebAppDeploymentBucket}"
+                  - !Sub "arn:aws:s3:::${WebAppDeploymentBucket}/*"
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-EC2-Role'
+          Value: !Sub "${AWS::StackName}-EC2-Role"
 
   EC2InstanceProfile:
     Type: AWS::IAM::InstanceProfile
@@ -177,60 +177,60 @@ Resources:
   CodeDeployRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub '${AWS::StackName}-CodeDeployRole'
+      RoleName: !Sub "${AWS::StackName}-CodeDeployRole"
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           - Effect: Allow
             Principal:
               Service: codedeploy.amazonaws.com
             Action: sts:AssumeRole
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForEC2
+        - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole
       Policies:
         - PolicyName: S3Access
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: "2012-10-17"
             Statement:
               - Effect: Allow
                 Action:
                   - s3:GetObject
                 Resource:
-                  - !Sub 'arn:aws:s3:::${WebAppDeploymentBucket}/*'
+                  - !Sub "arn:aws:s3:::${WebAppDeploymentBucket}/*"
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-CodeDeployRole'
+          Value: !Sub "${AWS::StackName}-CodeDeployRole"
 
   GitHubActionsRole:
     Type: AWS::IAM::Role
     Properties:
       RoleName: CodeDeployRoleforGitHub
       AssumeRolePolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Statement:
           - Effect: Allow
             Principal:
-              Federated: !Sub 'arn:aws:iam::${AWS::AccountId}:oidc-provider/token.actions.githubusercontent.com'
+              Federated: !Sub "arn:aws:iam::${AWS::AccountId}:oidc-provider/token.actions.githubusercontent.com"
             Action: sts:AssumeRoleWithWebIdentity
             Condition:
               StringEquals:
-                'token.actions.githubusercontent.com:aud': sts.amazonaws.com
+                "token.actions.githubusercontent.com:aud": sts.amazonaws.com
               StringLike:
-                'token.actions.githubusercontent.com:sub': !Sub 'repo:${GitHubRepoName}:*'
+                "token.actions.githubusercontent.com:sub": !Sub "repo:${GitHubRepoName}:*"
       Policies:
         - PolicyName: S3Upload
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: "2012-10-17"
             Statement:
               - Effect: Allow
                 Action:
                   - s3:PutObject
                   - s3:GetObject
                 Resource:
-                  - !Sub 'arn:aws:s3:::${WebAppDeploymentBucket}/*'
+                  - !Sub "arn:aws:s3:::${WebAppDeploymentBucket}/*"
         - PolicyName: CodeDeployTrigger
           PolicyDocument:
-            Version: '2012-10-17'
+            Version: "2012-10-17"
             Statement:
               - Effect: Allow
                 Action:
@@ -240,15 +240,16 @@ Resources:
                   - codedeploy:GetDeployment
                   - codedeploy:GetDeploymentConfig
                   - codedeploy:RegisterApplicationRevision
-                Resource: '*'
+                Resource: "*"
       Tags:
         - Key: Name
-          Value: !Sub '${AWS::StackName}-GitHubRole'
+          Value: !Sub "${AWS::StackName}-GitHubRole"
 
   WebAppDeploymentBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub '${AWS::StackName}-webappdeploymentbucket-${AWS::AccountId}'
+      # NOME CORRIGIDO: Usa AccountId para garantir minúsculas e unicidade
+      BucketName: !Sub "devops-app-deploy-${AWS::AccountId}"
       VersioningConfiguration:
         Status: Enabled
       PublicAccessBlockConfiguration:
@@ -260,9 +261,9 @@ Resources:
   LaunchTemplate:
     Type: AWS::EC2::LaunchTemplate
     Properties:
-      LaunchTemplateName: !Sub '${AWS::StackName}-LaunchTemplate'
+      LaunchTemplateName: !Sub "${AWS::StackName}-LaunchTemplate"
       LaunchTemplateData:
-        ImageId: !Sub '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}'
+        ImageId: !Sub "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}"
         InstanceType: t3.micro
         IamInstanceProfile:
           Arn: !GetAtt EC2InstanceProfile.Arn
@@ -272,25 +273,25 @@ Resources:
           - ResourceType: instance
             Tags:
               - Key: Name
-                Value: !Sub '${AWS::StackName}-webapp-example'
+                Value: !Sub "${AWS::StackName}-webapp-example"
         UserData:
           Fn::Base64: !Sub |
             #!/bin/bash
             yum update -y
             yum install -y ruby wget amazon-cloudwatch-agent
-            
+
             cd /home/ec2-user
             wget https://aws-codedeploy-${AWS::Region}.s3.${AWS::Region}.amazonaws.com/latest/install
             chmod +x ./install
             ./install auto
-            
+
             systemctl start codedeploy-agent
             systemctl enable codedeploy-agent
 
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      AutoScalingGroupName: !Sub '${AWS::StackName}-ASG'
+      AutoScalingGroupName: !Sub "${AWS::StackName}-ASG"
       VPCZoneIdentifier:
         - !Ref PublicSubnet1
         - !Ref PublicSubnet2
@@ -308,7 +309,7 @@ Resources:
   LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
-      Name: !Sub '${AWS::StackName}-ALB'
+      Name: !Sub "${AWS::StackName}-ALB"
       Subnets:
         - !Ref PublicSubnet1
         - !Ref PublicSubnet2
@@ -318,7 +319,7 @@ Resources:
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub '${AWS::StackName}-TG'
+      Name: !Sub "${AWS::StackName}-TG"
       Port: 8080
       Protocol: HTTP
       VpcId: !Ref VPC
@@ -341,7 +342,7 @@ Resources:
       Protocol: HTTP
 
   CodeDeployApplication:
-    Type: AWS::CodeDeploy::App
+    Type: AWS::CodeDeploy::Application
     Properties:
       ApplicationName: CodeDeployAppNameWithASG
       ComputePlatform: Server
@@ -360,11 +361,13 @@ Resources:
         Enabled: true
         Events:
           - DEPLOYMENT_FAILURE
-          - DEPLOYMENT_STOP_ON_TIMEOUT
-      Ec2TagFilters:
-        - Type: KEY_AND_VALUE
-          Key: 'aws:autoscaling:groupName'
-          Value: !Ref AutoScalingGroup
+          # REMOVIDO: DEPLOYMENT_STOP_ON_TIMEOUT não é um evento válido
+      # ADICIONADO: Obrigatório quando se usa WITH_TRAFFIC_CONTROL
+      LoadBalancerInfo:
+        TargetGroupInfoList:
+          - Name: !GetAtt TargetGroup.TargetGroupName
+      AutoScalingGroups:
+        - !Ref AutoScalingGroup
 
 Outputs:
   ApplicationName:
@@ -385,7 +388,7 @@ Outputs:
 
   WebappUrl:
     Description: URL da aplicação
-    Value: !Sub 'http://${LoadBalancer.DNSName}:8080/SpringBootHelloWorldExampleApplication/'
+    Value: !Sub "http://${LoadBalancer.DNSName}:8080/SpringBootHelloWorldExampleApplication/"
 
   LoadBalancerDNS:
     Description: Load Balancer DNS
